<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/variables_in_kotlin"/>

    <RadioGroup
        android:id="@+id/variablesRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/valRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/val" />

        <RadioButton
            android:id="@+id/varRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/var"/>

        <RadioButton
            android:id="@+id/letRB"
            android:layout_width="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:layout_height="wrap_content"
            android:text="@string/let"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/iteration_in_kotlin"
        />

    <CheckBox
        android:id="@+id/repeatCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxChecked"
        android:text="@string/repeat"/>

    <CheckBox
        android:id="@+id/loopCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxChecked"
        android:text="@string/loop"/>

    <CheckBox
        android:id="@+id/foreachCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxChecked"
        android:text="@string/foreach"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/submit"/>

        <Button
            android:id="@+id/resetBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>
    </LinearLayout>
</LinearLayout>